Fixed url overlap issue

--- a/src/styles/portfolio-item.css
+++ b/src/styles/portfolio-item.css
@@ -9,7 +9,7 @@
 }
 
 .portfolio-item__link {
-  float: right;
+  text-align: right;
 }
 
 .portfolio-item__link:active {
